--- a/index.html
+++ b/index.html
@@ -6,22 +6,61 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Best Traveler In Bangladeshl</title>
         <link rel="stylesheet" href="index.css">
+
+        <!-- dasuyui link -->
+        <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
+        <script src="https://cdn.tailwindcss.com"></script>
     </head>
 
     <body>
         <header>
 
-            <nav class="header-section">
-                <div class="nev-bar">
-                    <h3 class="nav-title">Best <samp class="text-primary">Traveler</samp> </h3>
-                    <ul>
-                        <li><a href=""></a>Home</li>
-                        <li><a href=""></a>About</li>
-                        <li><a href=""></a>Contact Us</li>
-                        <li><a href=""></a>Login</li>
+            <!-- navbar section -->
+
+            <div class="navbar bg-base-100">
+                <div class="navbar-start">
+                    <div class="dropdown">
+                        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M4 6h16M4 12h8m-8 6h16" />
+                            </svg>
+                        </div>
+                        <ul tabindex="0"
+                            class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+                            <li><a>Home</a></li>
+                            <li>
+                                <a>Parent</a>
+                                <ul class="p-2">
+                                    <li><a>Submenu 1</a></li>
+                                    <li><a>Submenu 2</a></li>
+                                </ul>
+                            </li>
+                            <li><a>Item 3</a></li>
+                        </ul>
+                    </div>
+                    <a class="btn btn-ghost text-xl">Best Traveler</a>
+                </div>
+                <div class="navbar-center hidden lg:flex">
+                    <ul class="menu menu-horizontal px-1">
+                        <li><a>Home</a></li>
+                        <li>
+                            <details>
+                                <summary>Contact Us</summary>
+                                <ul class="p-2">
+                                    <li><a>Submenu 1</a></li>
+                                    <li><a>Submenu 2</a></li>
+                                </ul>
+                            </details>
+                        </li>
+                        <li><a>About</a></li>
                     </ul>
                 </div>
-            </nav>
+                <div class="navbar-end">
+                    <button class="colo">log in</button>
+                </div>
+            </div>
             <div class="header">
 
 
@@ -44,16 +83,23 @@
         <main>
             <!-- Travel ditails section -->
             <section class="ditails-contain">
-                
+
                 <div class="tream-image">
-                    <h1 class="ditails-tilte">M.H. <samp class="text-primary" >RockY</samp></h1>
+                    <h1 class="ditails-tilte">M.H. <samp class="text-primary">RockY</samp></h1>
                     <h4 class="text-primary">Origin of name</h4>
-                    <p>The name of Sajek Valley came from the Sajek River that originates from Karnafuli river. <br> The Sajek river works as a border between Bangladesh and India</p>
+                    <p>The name of Sajek Valley came from the Sajek River that originates from Karnafuli river. <br> The
+                        Sajek river works as a border between Bangladesh and India</p>
                     <h4 class="text-primary">Location</h4>
-                    <p>Sajek is a union located in the north of Chittagong Hill Tracts. <br> It's under Baghaichori Upazila in Rangamati hill district, it is situated 67 kilometres (42 mi) <br> north-east from Khagrachhari town and 95 kilometres (59 mi) north from Rangamati city. <br> The border of Bangladesh and Mizoram of India is 8 kilometres (5.0 mi) east from Sajek</p>
+                    <p>Sajek is a union located in the north of Chittagong Hill Tracts. <br> It's under Baghaichori
+                        Upazila in Rangamati hill district, it is situated 67 kilometres (42 mi) <br> north-east from
+                        Khagrachhari town and 95 kilometres (59 mi) north from Rangamati city. <br> The border of
+                        Bangladesh and Mizoram of India is 8 kilometres (5.0 mi) east from Sajek</p>
                     <img src="image/2.jpg" alt="">
                     <h4 class="text-primary">Nature</h4>
-                    <p>Sajek valley is known for its natural environment and is surrounded by mountains, dense forest, and grassland hill tracks. <br> Many small rivers flow through the mountains among which the Kachalong and the Machalong are notable. <br> On the way to Sajek valley, one has to cross the Mayni range and the Mayni river. The road to Sajek has high peaks and falls</p>
+                    <p>Sajek valley is known for its natural environment and is surrounded by mountains, dense forest,
+                        and grassland hill tracks. <br> Many small rivers flow through the mountains among which the
+                        Kachalong and the Machalong are notable. <br> On the way to Sajek valley, one has to cross the
+                        Mayni range and the Mayni river. The road to Sajek has high peaks and falls</p>
 
                 </div>
             </section>
